Alignment link colour fixes

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -25,9 +25,9 @@
 	:root {
         --background-color: var(--black);
         --text-color: var(--white);
-		--text-color-link: var(--red);
-        --text-color-link-hover: var(--white);
-        --text-color-link-hover-background: var(--red);
+		--text-color-link: var(--white);
+        --text-color-link-hover: var(--red);
+        --text-color-link-hover-background: var(--white);
 		--text-color-link-active: var(--white);
 	}
 }
@@ -57,10 +57,7 @@ body {
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    display: block;
     width: var(--max-width);
     margin: 0 auto;
 }
